--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,11 +3,14 @@
 
 name: Go
 
+# on:
+#   push:
+#     branches: [ "master" ]
+#   pull_request:
+#     branches: [ "master" ]
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  release:
+    types: [created]
 jobs:
   build-and-tag:
     runs-on: windows-latest  
