--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,22 +22,23 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.19 
+        go-version: 1.19
+        github_token: ${{ secrets.GITHUB_TOKEN }} 
 
     - name: Build
       run: |
         go mod tidy
         go build -tags release
 
-#     - name: Create Tag
-#       run: |
-#         echo ::set-env name=TAG::v1.0.${{ github.run_number }}
-#         echo $TAG >> $GITHUB_ENV
+    - name: Create Tag
+      run: |
+        echo ::set-env name=TAG::v1.0.${{ github.run_number }}
+        echo $TAG >> $GITHUB_ENV
 
-#     - name: Push Tag
-#       if: success()
-#       run: |
-#         git config --local user.email "754277710@qq.com"
-#         git config --local user.name "GitHub Action"
-#         git tag $TAG
-#         git push origin $TAG
+    - name: Push Tag
+      if: success()
+      run: |
+        git config --local user.email "754277710@qq.com"
+        git config --local user.name "GitHub Action"
+        git tag $TAG
+        git push origin $TAG
