--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -92,13 +92,12 @@ jobs:
     # Go build exe 命令
     - name: Build exe
       run: |
-         go env -w CGO_ENABLED=1
          go mod tidy
          go build -tags release
-      env:
-        GOOS: ${{ matrix.goos }}
-        GOARCH: ${{ matrix.goarch }}
-        CGO_ENABLED: 0
+#      env:
+#        GOOS: ${{ matrix.goos }}
+#        GOARCH: ${{ matrix.goarch }}
+#        CGO_ENABLED: 0
     
 #     # exe文件压缩一下 减少体积
 #     - name: Packaging...
