--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -111,6 +111,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # 这里是create_release步骤输出的参数
-        asset_path: ./switchENV-${{ matrix.goos }}-${{ steps.get_version.outputs.VERSION }}.tgz
-        asset_name: switchENV-${{ matrix.goos }}-${{ steps.get_version.outputs.VERSION }}.tgz
-        asset_content_type: application/gzip
+        asset_path: ./toolbox-server.exe
+        asset_name: toolbox-server.exe
+        asset_content_type: application/octet-stream
